大致实现了文章列表页面

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>hello world</title>
+        <title>xudonghuang20's blog</title>
+        <link rel="stylesheet" type="text/css" href="css/head_page.css">
+        <link rel="stylesheet" type="text/css" href="css/main_page.css">
+        <script defer="defer" type="application/javascript" src="js/data.js"></script>
     </head>
     <body>
-        <h1>hello world</h1>
-        <p>hello world</p>
+        <div class="head-page">
+            <div class="left-options">
+                <a class="left-option">world</a>
+                <a class="left-option">earth</a>
+                <a class="left-option">universe</a>
+            </div>
+            <div class="author-avatar"></div>
+        </div>
+        <div class="main-page">
+            <div class="article-list"></div>
+        </div>
     </body>
 </html>
